# substrate-tutorials

./: .Dockerfile  .editorconfig  .gitignore  .gitmodules  .taplo.toml  Cargo.toml  LICENSE  README.md  docker-compose.yml  run_one_exercise_tests.sh  rustfmt.toml  test_in_docker.sh
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  rust.yml  solutions.yml
exercises/ex00-testing/: README.md
exercises/ex00-testing/flipper/: Cargo.toml
exercises/ex00-testing/flipper/src/: lib.rs
exercises/ex00-testing/flipper/src/tests/: flipper.rs  mock.rs
exercises/ex00-writing-tests/: README.md
exercises/ex00-writing-tests/flipper/: Cargo.toml
exercises/ex00-writing-tests/flipper/src/: lib.rs
exercises/ex00-writing-tests/flipper/src/tests/: flipper.rs  mock.rs  mod.rs
exercises/ex01-fungible-token/: README.md
exercises/ex01-fungible-token/assets/: Cargo.toml
exercises/ex01-fungible-token/assets/src/: lib.rs
exercises/ex01-fungible-token/assets/src/tests/: assets.rs  mock.rs
exercises/ex01-pallet-easy/: README.md
exercises/ex01-pallet-easy/assets/: Cargo.toml
exercises/ex01-pallet-easy/assets/src/: lib.rs  types.rs
exercises/ex01-pallet-easy/assets/src/tests/: assets.rs  mock.rs  mod.rs
exercises/ex02-nft/nft/src/: lib.rs
exercises/ex02-nfts/nfts/: Cargo.toml
exercises/ex02-nfts/nfts/src/: lib.rs
exercises/ex02-nfts/nfts/src/tests/: mock.rs  mod.rs  unique_assets.rs
exercises/ex02-runtime/: README.md
exercises/ex03-marketplace/loosely-coupled-marketplace/src/: lib.rs  traits.rs  types.rs
exercises/ex03-marketplace/marketplace-nfts/src/: lib.rs  types.rs
exercises/ex03-marketplace/tightly-coupled-marketplace/: Cargo.toml
exercises/ex03-marketplace/tightly-coupled-marketplace/src/: lib.rs  types.rs
exercises/ex03-marketplace/tightly-coupled-marketplace/src/tests/: marketplace.rs  mock.rs
exercises/ex03-nft/: README.md
exercises/ex03-nft/nft/: Cargo.toml
exercises/ex03-nft/nft/src/: lib.rs
exercises/ex03-pallet-intermediate/: README.md
exercises/ex03-pallet-intermediate/nft/: Cargo.toml
exercises/ex03-pallet-intermediate/nft/src/: lib.rs  types.rs
exercises/ex03-pallet-intermediate/nft/src/tests/: mock.rs
exercises/ex04-marketplace/: README.MD
exercises/ex04-marketplace/loosely-coupled-marketplace/: Cargo.toml
exercises/ex04-marketplace/loosely-coupled-marketplace/src/: lib.rs
exercises/ex04-marketplace/marketplace-nfts/: Cargo.toml
exercises/ex04-marketplace/marketplace-nfts/src/: lib.rs  types.rs
exercises/ex04-marketplace/tightly-coupled-marketplace/: Cargo.toml
exercises/ex04-marketplace/tightly-coupled-marketplace/src/: lib.rs
exercises/ex04-pallet-coupling/: README.MD
exercises/ex04-pallet-coupling/loosely-coupled-marketplace/: Cargo.toml
exercises/ex04-pallet-coupling/loosely-coupled-marketplace/src/: lib.rs  types.rs
exercises/ex04-pallet-coupling/loosely-coupled-marketplace/src/tests/: marketplace.rs  mock.rs
exercises/ex04-pallet-coupling/marketplace-nfts/: Cargo.toml
exercises/ex04-pallet-coupling/marketplace-nfts/src/: lib.rs  types.rs
exercises/ex04-pallet-coupling/tightly-coupled-marketplace/: Cargo.toml
exercises/ex04-pallet-coupling/tightly-coupled-marketplace/src/: lib.rs
exercises/ex05-hooks/: README.md
exercises/ex05-hooks/hooks/: Cargo.toml
exercises/ex05-hooks/hooks/src/: lib.rs  mock.rs  tests.rs
exercises/ex05-hooks/reminder/: Cargo.toml
exercises/ex05-hooks/reminder/src/: lib.rs  mock.rs  tests.rs
exercises/ex05-offchain-workers/http-call/: Cargo.toml
exercises/ex05-offchain-workers/http-call/src/: lib.rs  tests.rs
exercises/ex05-offchain-workers/offchain-call/: Cargo.toml
exercises/ex05-offchain-workers/offchain-call/src/: lib.rs  tests.rs
exercises/ex05-offchain-workers/transaction-function/: Cargo.toml
exercises/ex05-offchain-workers/transaction-function/src/: lib.rs  ocw_test_mod.rs  tests.rs
exercises/ex05-reminder/: README.md
exercises/ex05-reminder/reminder/: Cargo.toml
exercises/ex05-reminder/reminder/src/: lib.rs  mock.rs  tests.rs
exercises/ex05-scheduler/reminder/src/: lib.rs  mock.rs
exercises/ex06-benchmarks/: README.md
exercises/ex06-weights/: README.md
exercises/ex06-weights/weights/: Cargo.toml
exercises/ex06-weights/weights/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
exercises/ex07-imbalances/: README.md
exercises/ex07-imbalances/imbalances/: Cargo.toml
exercises/ex07-imbalances/imbalances/src/: lib.rs
exercises/ex07-imbalances/imbalances/src/tests/: mint.rs  mock.rs  mod.rs  sack.rs  slash.rs
exercises/ex08-genesis-config/: README.md
exercises/ex08-genesis-config/nft-with-genesis-config/: Cargo.toml
exercises/ex08-genesis-config/nft-with-genesis-config/src/: lib.rs  types.rs
exercises/ex09-mock/: README.md
exercises/ex09-mock/pallet-to-mock/: Cargo.toml
exercises/ex09-mock/pallet-to-mock/src/: lib.rs
exercises/ex09-mock/pallet-to-mock/src/tests/: mint.rs  mock.rs  mod.rs
exercises/ex10-offchain-worker/: README.md
exercises/ex10-offchain-worker/pallet-price-oracle/: Cargo.toml
exercises/ex10-offchain-worker/pallet-price-oracle/src/: lib.rs
exercises/ex10-offchain-worker/pallet-price-oracle/src/offchain_worker/: error.rs  mod.rs
exercises/ex10-offchain-worker/pallet-price-oracle/src/tests/: mock.rs  mod.rs  offchain_worker.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/assets/: Cargo.toml
pallets/assets/src/: lib.rs  types.rs
pallets/assets/src/tests/: assets.rs  mock.rs
pallets/flipper/: Cargo.toml
pallets/flipper/src/: benchmarking.rs
pallets/flipper/src/tests/: mock.rs  tests.rs
pallets/nfts/: Cargo.toml
pallets/nfts/src/: lib.rs  types.rs
pallets/nfts/src/tests/: mock.rs  unique_assets.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/template/src/tests/: mock.rs
polkadot-sdk-solochain-template/: Cargo.toml
polkadot-sdk-solochain-template/node/: Cargo.toml
polkadot-sdk-solochain-template/pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
(+16 files in other folders)
