[package]
authors     = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build       = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition     = "2021"
homepage    = "https://substrate.io/"
license     = "Unlicense"
name        = "rusty-node"
publish     = false
repository  = "https://github.com/substrate-developer-hub/substrate-rusty-node/"
version     = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "rusty-node"

[dependencies]
structopt = "0.3.25"

sc-cli                  = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-client-api           = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-consensus            = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-consensus-aura       = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-executor             = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-finality-grandpa     = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-keystore             = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-service              = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-telemetry            = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-transaction-pool     = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-consensus            = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-consensus-aura       = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-core                 = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-finality-grandpa     = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-runtime              = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-timestamp            = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }

# These dependencies are used for the node template's RPCs
jsonrpc-core                   = "18.0.0"
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-basic-authorship            = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-rpc-api                     = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-api                         = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-blockchain                  = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }

# These dependencies are used for runtime benchmarking
frame-benchmarking     = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }

# Local Dependencies
rusty-node-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }

[features]
default            = []
runtime-benchmarks = ["rusty-node-runtime/runtime-benchmarks"]
