[package]
authors     = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate runtime, ready for hacking."
edition     = "2021"
homepage    = "https://substrate.io/"
license     = "Unlicense"
name        = "rusty-node-runtime"
publish     = false
repository  = "https://github.com/substrate-developer-hub/substrate-rusty-node/"
version     = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }

frame-executive                   = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
frame-support                     = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
frame-system                      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
pallet-aura                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
pallet-balances                   = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
pallet-grandpa                    = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
pallet-sudo                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
pallet-timestamp                  = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
pallet-transaction-payment        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-api                            = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-block-builder                  = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-consensus-aura                 = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-core                           = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-inherents                      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-offchain                       = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-runtime                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-session                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-std                            = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-transaction-pool               = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-version                        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api               = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }

# Used for runtime benchmarking
frame-benchmarking        = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12", optional = true }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12", optional = true }
hex-literal               = { version = "0.3.4", optional = true }

# Local Dependencies
pallet-nft = { default-features = false, path = "../pallets/nfts" }
pallet-assets = { default-features = false, path = "../pallets/assets" }
pallet-flipper = { default-features = false, path = "../pallets/flipper" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-nft/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-flipper/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-nft/std",
	"pallet-assets/std",
	"pallet-flipper/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
