[package]
authors    = ["Simon Galasso"]
edition    = "2021"
license    = "Apache-2.0"
name       = "pallet-flipper"
publish    = false
repository = "https://github.com/substrate-developer-hub/substrate-rusty-node/"
version    = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12", optional = true }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }

[dev-dependencies]
sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-io      = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-12" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime        = ["frame-support/try-runtime"]
